--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 # Created by .ignore support plugin (hsz.mobi)
+.idea/.gitignore
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/watcherTasks.xml
+function.zip
+main
+nature-remo-create-graph.iml
